# vita_panel_testing

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_EVOLUTION.md  AVATAR_ACTION_SPEC.md  CHANGES.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  MEMORY_STORE_README.md  MODULARIZATION_SUMMARY.md  Makefile  OLLAMA_SETUP.md  README.md  TESTING_GUIDE.md  TEST_PROTOCOL.md  auth.py  chat_agents.py  content_extractor.py  deploy_vita_linux.sh  dev-requirements.txt  example_integration.py  file_uploader.py  github_auth.py  github_issues.md  llm_connect.py  main.py  main_test.py  main_test.py.old  main_test_w_rag.py  memory_store.py  oauth_test.py  oauth_test2.py  oauth_test2.py.old  panel_readme.md  persona_manager.py  pyproject.toml  rag_backend.py  rag_backend_enhanced.py  requirements.txt  (+28 more)
.cache/41/: cache.db
.cache/42/: cache.db
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: integration-tester.md  kevin-devops-github.md  product-backlog-manager.md  pytest-test-engineer.md  python-ai-specialist.md  python-scrum-developer.md  rag-optimization-expert.md  rag-specialist.md
.github/ISSUE_TEMPLATE/: enabler.md  epic.md  estimation-exercise.md  learning-activity.md  learning-objective.md  safe-practice.md  three-session-learning.md  user-story.md
.github/workflows/: README.md  claude-code-review.yml  flow-metrics.yml
claude-conduit/: .gitignore  README.md  TESTING.md  claude-conduit-fortunes.js  package-lock.json  package.json  server.js
claude-conduit/tests/unit/: fortune-system.test.js
data/: dummy_data.json  sample_rag_data.json
docs/: github-workflow-guide.md
experimental/docs/: PRISM_SYSTEM.md
experimental/personas/: prism_multiagent.json  prism_spectrum.json
instructor_created_data/HTML_Guides_byModule/HTML_Guides_byModule/Jupyter_slides/: M1_OrderOfPrecedence_end_sep.ipynb  M2_dictionaryBasics.ipynb  M2_lists.ipynb  M3_if_elif.ipynb  M3_match_case.ipynb  M4_augmented_assign.ipynb  M4_whileLoop.ipynb  M5_functions_intro.ipynb  M5_passing_listsToFunction.ipynb
instructor_created_data/HTML_Guides_byModule/HTML_Guides_byModule/Module1_input_output_processing/: M1_Converting_String.html  M1_OrderOfPrecedence_end_sep.html  M1_input_output_basics.html
instructor_created_data/HTML_Guides_byModule/HTML_Guides_byModule/Module2_variables_dataTypes/: M2_dictionaryBasics.html  M2_lists.html
instructor_created_data/HTML_Guides_byModule/HTML_Guides_byModule/Module3_Branching/: M3_if_elif.html  M3_if_statement.html
instructor_created_data/HTML_Guides_byModule/HTML_Guides_byModule/Module4_Loops/: M4_augmented_assign.html  M4_for_loops.html  M4_whileLoop.html
instructor_created_data/HTML_Guides_byModule/HTML_Guides_byModule/Module5_Functions/: M5_custom_functions.html  M5_functions_intro.html  M5_passing_listsToFunction.html
instructor_created_data/HTML_Guides_byModule/Jupyter_slides/: M1_Converting_String.ipynb  M1_input_output_basics.ipynb  M3_if_statement.ipynb  M4_for_loops.ipynb  M5_custom_functions.ipynb
instructor_created_data/HTML_Guides_byModule/Module1_input_output_processing/: M1_Converting_String.html  M1_OrderOfPrecedence_end_sep.html  M1_input_output_basics.html
instructor_created_data/HTML_Guides_byModule/Module2_variables_dataTypes/: M2_dictionaryBasics.html  M2_lists.html
instructor_created_data/HTML_Guides_byModule/Module3_Branching/: M3_if_elif.html  M3_if_statement.html  match_case .html
instructor_created_data/HTML_Guides_byModule/Module4_Loops/: M4_augmented_assign.html  M4_for_loops.html  M4_whileLoop.html
instructor_created_data/HTML_Guides_byModule/Module5_Functions/: M5_custom_functions.html  M5_functions_intro.html  M5_passing_listsToFunction.html
instructor_created_data/HTML_Slides/: 01_HTML_Basics.ppt  02_HTML_Tables.ppt
instructor_created_data/Python_Slides/Python_Slides/: 01_Gaddis Python 3e Chapter 01 PPT(Intro to Python).ppt  02_Gaddis Python 3e Chapter 02 PPT(input and output processing).ppt  03_Gaddis P_ython 3e Chapter 03 PPT(Branching).ppt  04_Gaddis Python 3e Chapter 04 PPT(Loops).ppt  05_Gaddis Python 3e Chapter 05 PPT(Functions).ppt
instructor_created_data/Q.As/Q&As/: QnA.json  whileLoop_usingBreak.html  whileLoop_usingBreak.ipynb
meeting_notes/: 2024_10_01.txt  meeting_notes_jun18_2025.md  meeting_notes_jun18_2025_followup.md
personas/: dr_liza.json  kal_circuit.json  vita_default.json  vita_duo.json  vita_experimental.json  vita_trio.json
tests/: __init__.py  test_agent_functions.py  test_console_demo.py  test_file_upload.py  test_persona_behavior.py  test_vita_trio.py
tests/test_data/: syntax_error.py  valid_code.py
user_interface/: styles.css
vita-project/docs/: PRD-VITA-Enhanced.md  estimation-tracking-worksheet.md  flow-safe-presentation-plan.md  focus-system-for-students.md  project-management-matrix.md  repeatable-workflow-patterns.md  sprint-based-learning-workflow.md  story-points-estimation-guide.md  student-onboarding-guide.md  three-session-workflow.md  why-flow-works.md
vita-project/tasks/: tasks.json
vita_lib/: README.md  __init__.py  auth.py  config.py  file_handler.py  llm.py  main_app.py
vita_venv/: pyvenv.cfg
vita_venv/Scripts/: activate  activate.bat
